# aad-aws-iam-login

./: .gitignore  README.md  pyproject.toml
diagrams/: overview.py
tests/: test_aad_aws_iam_login.py
