[tool.poetry]
name = "aad-aws-iam-login"
version = "0.1.0"
description = "Generates AWS STS credentials from an AAD login"
authors = ["Mark Altmann <mark.altmann@etas.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
